<resources>
    <string name="app_name">몰랑톡</string>

    <string name="signup_nickname_section_title">채팅에서 사용할 \n닉네임을 입력해 주세요.</string>
    <string name="signup_nickname_hint_nickname_input">닉네임을 입력해주세요. (ex: 팥없는붕어빵)</string>

    <string name="signup_gender_section_title">채팅에서 사용할 \n성별을 선택해 주세요.</string>
    <string name="signup_gender_man">남자</string>
    <string name="signup_gender_woman">여자</string>

    <string name="signup_age_section_title">채팅에서 사용할 \n나이를 입력해 주세요.</string>
    <string name="signup_age_hint_age_input">나이를 입력해주세요. (ex: 30)</string>

    <string name="btn_next">다음</string>
    <string name="btn_start_molang">몰랑톡 시작하기</string>

    <string name="home_bottom_navigation_title_matching">매칭</string>
    <string name="home_bottom_navigation_title_chatting">채팅</string>
    <string name="home_bottom_navigation_title_setting">설정</string>
    <string name="home_bottom_navigation_title_cash">포인트</string>

    <string name="home_matching_section_title">랜덤 채팅 상대를 찾아보세요.</string>
    <string name="home_matching_btn_random_matching">랜덤 상대 찾기</string>
    <string name="home_matching_btn_different_sex_matching">이성 상대 찾기</string>

    <string name="profile_setting_hint_nickname_input">닉네임을 입력해주세요. (ex: 팥없는붕어빵)</string>
    <string name="profile_setting_hint_age_input">나이를 입력해주세요. (ex: 30)</string>
    <string name="profile_setting_btn_update_profile">프로필 업데이트</string>

    <string name="home_point_btn_charge_point">포인트 충전하기</string>
    <string name="home_point_my_point">내 포인트</string>
    <string name="home_point_my_point_formatter">%s Point</string>
</resources>
