<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_section_title"
            style="@style/AppTheme.SignUp.Section.Title.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/home_matching_section_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.molang.talk.ui.common.custom.CircleButton
            android:id="@+id/btn_random_matching"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cb_text="@string/home_matching_btn_random_matching"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_different_sex_matching"
            app:layout_constraintTop_toTopOf="parent" />

        <com.molang.talk.ui.common.custom.CircleButton
            android:id="@+id/btn_different_sex_matching"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            app:cb_text="@string/home_matching_btn_different_sex_matching"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_random_matching" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
